<resources>
    <string name="app_name">Tour Guide</string>
    <string name="open">open</string>
    <string name="close">close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="RestaurantsFragment">RestaurantsFragment</string>
    <string name="AttractionsFragment">AttractionsFragment</string>
    <string name="Restaurants">Restaurants</string>
    <string name="Attractions">Attractions</string>
    <string name="Markets">Markets</string>
    <string name="Hotels">Hotels</string>
    <string name="nile_river_cafe">nile river cafe</string>
    <string name="description">A great place to have a nice sudanese cup of coffee. The place is filled with very cool sudanese vibes and traditional decor :)</string>
    <string name="nile_river_street">Nile river street</string>
    <string name="working_hours">working hours</string>
    <string name="phone_no">phone no.</string>
    <string name="place_image">place image</string>
    <string name="nav_header_image">nav header image</string>
    <string name="Nubian_pyramids_name">Nubian pyramids</string>
    <string name="Nubian_pyramids_desc">Nubian pyramids are pyramids that were built by the rulers of the ancient Kushite kingdoms. The area of the Nile valley known as Nubia, which lies within the north of present day Sudan, was home to three Kushite kingdoms during antiquity. The first had its capital at Kerma. The second was centered on Napata. Finally, the last kingdom was centered on Meroë. They are built of granite and sandstone. The pyramids were partially demolished by Italian treasure hunter Giuseppe Ferlini in the 1830s.</string>
    <string name="khartoum_sudan_loc">Khartoum, Sudan</string>
    <string name="working_hours_24">Open 24 hours</string>
    <string name="National_Museum_name">National Museum of Sudan</string>
    <string name="National_Museum_desc">a double storied building constructed in 1955 and established as a museum in 1971. The building and its surrounding gardens house the largest and most comprehensive Nubian archaeological collection in the world including objects from the Paleolithic through to the Islamic period originating from every site of importance in the Sudan.</string>
    <string name="National_Museum_loc">Nile St, Khartoum, Sudan</string>
    <string name="National_Museum_hours">9AM-5PM</string>
    <string name="National_Museum_phone">+249 91 218 8894</string>
    <string name="Tuti_Island_name">Tuti Island</string>
    <string name="Tuti_Island_desc">Tuti Island is an island in Sudan where the White Nile and Blue Nile merge to form the main Nile. It is surrounded by the \"Three Towns\": Khartoum, Omdurman, and Khartoum North. Despite this, Tuti is home to only one small village, with grassland being the main makeup of the island.</string>
    <string name="Al_Salam_Rotana_name">Al Salam Rotana</string>
    <string name="Al_Salam_Rotana_desc">So many travelers make Al Salam Hotel their hotel of choice when visiting Khartoum. Providing an ideal mix of value, comfort and convenience, it offers a family-friendly setting with an array of amenities designed for travelers like you.</string>
    <string name="Al_Salam_Rotana_loc">Africa St, Khartoum, Sudan</string>
    <string name="Al_Salam_Rotana_phone">+249 18 700 7777</string>
    <string name="Grand_Holiday_name">Grand Holiday Villa Hotel</string>
    <string name="Grand_Holiday_desc"><![CDATA[Built in the late 1800, the Grand Holiday Villa Hotel & Suites Khartoum\'s historical building exudes an old world charm of the colonial era. Centrally located in the heart of Khartoum\'s commercial hub, this hotel features 160 guest room, in addition to office suites, a shopping arcade and an exclusive recreational club.]]></string>
    <string name="Grand_Holiday_phone">+249 18 377 4039</string>
    <string name="Corinthia_Hotel_name">Corinthia Hotel</string>
    <string name="Corinthia_Hotel_desc"><![CDATA[A sleek architectural masterpiece of steel and glass, CORINTHIA Hotel Khartoum redefines the business hotel category and is the ideal environment for corporate and leisure travelers. With 230 rooms and suites, six restaurants and cafes, spa with indoor pool, Jacuzzi, steam, sauna & Turkish hammam, tennis, and squash courts, gymnasium, business centre, convention centre, Wi-Fi connection in guests’ rooms and meeting space and covered car parking lot.]]></string>
    <string name="Corinthia_Hotel_phone">+249 18 715 5555</string>
    <string name="Saad_Gishra_Market_name">Saad Gishra Market</string>
    <string name="Saad_Gishra_Market_desc">In the center of khartoum state, a big, colourful market containing everything you will ever need.</string>
    <string name="Saad_Gishra_Market_loc">Al-Ma Una Street، Khartoum North, Sudan</string>
    <string name="Saad_Gishra_Market_hours">7AM-12AM</string>
    <string name="Saad_Gishra_Market_phone">+249 91 417 6760</string>
    <string name="Central_Market_name">Central Market</string>
    <string name="Central_Market_desc">One of the biggest farmers markets in khartoum.</string>
    <string name="Central_Market_loc">khartoum North, Khartoum, Sudan</string>
    <string name="Central_Market_hours">6AM-9PM</string>
    <string name="AlAnfal_Super_Market_name">Al-Anfal Super Market</string>
    <string name="AlAnfal_Super_Market_desc">If you need to go grocery shopping and you need the whole shopping cart experience with not so overpriced products then this is where you need to go</string>
    <string name="AlAnfal_Super_Market_loc">Al-Mashtal St, Khartoum, Sudan</string>
    <string name="AlAnfal_Super_Market_phone">+249 92 240 5363</string>
    <string name="AlWaha_Mall_name">Al-Waha Mall</string>
    <string name="AlWaha_Mall_desc">Want the best customer experience, best international brands, and have a big budget? then you need to see this place</string>
    <string name="AlWaha_Mall_hours">10AM-9:30PM</string>
    <string name="AlWaha_Mall_phone">+249 18 374 0074</string>
    <string name="Nile_River_Cafe_name">Nile River Cafe</string>
    <string name="Nile_River_Cafe_desc">A great place to have a nice sudanese cup of coffee. The place is filled with very cool sudanese vibes and traditional decor :)</string>
    <string name="Nile_River_Cafe_loc">Ground Floor, Corinthia Hotel, Nile St, Khartoum, Sudan</string>
    <string name="Nile_River_Cafe_hours">7AM-12AM</string>
    <string name="Nile_River_Cafe_phone">+249 96 428 0532</string>
    <string name="Ozone_Cafe_name">Ozone Cafe</string>
    <string name="Ozone_Cafe_desc">If you\'re in the mood for a quick bite, or a steaming cup of coffee with a decadent dessert, then look no further than Ozone Café in Khartoum</string>
    <string name="Ozone_Cafe_loc">khartoum2, Khartoum, Sudan</string>
    <string name="Ozone_Cafe_hours">8AM-11PM</string>
    <string name="Ozone_Cafe_phone">+249 15 588 4170</string>
    <string name="Le_Grill_name">Le Grill</string>
    <string name="Le_Grill_desc">A hallmark of excellence, a steakhouse that attracts locals for an unforgettable dining experience. As live music fills the air, sip, savour and indulge at Le Grill.</string>
    <string name="Le_Grill_loc">Floor 0 , Corinthia Hotel, Nile St, Khartoum, Sudan</string>
    <string name="Le_Grill_hours">11AM-12AM</string>
    <string name="Le_Grill_phone">+249 (0) 187 155 555</string>
    <string name="Samakna_Restaurant_name">Samakna Restaurant</string>
    <string name="Samakna_Restaurant_desc">Not just a fish restaurant, but the best fish restaurant in town.</string>
    <string name="Samakna_Restaurant_loc">Omak Street, Khartoum, Sudan</string>
    <string name="Samakna_Restaurant_hours">8AM-12AM</string>
    <string name="Samakna_Restaurant_phone">+249 91 233 9497</string>
</resources>
