<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="4dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:orientation="vertical"
        android:layout_marginStart="8dp">

        <ImageView
            android:id="@+id/place_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:src="@drawable/nile_river_cafe"
            android:contentDescription="@string/place_image" />

        <TextView
            android:id="@+id/place_name"
            style="@style/TextViewsStyle"
            android:text="@string/nile_river_cafe"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

        <TextView
            android:id="@+id/place_description"
            style="@style/TextViewsStyle"
            android:text="@string/description"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

            <TextView
                android:id="@+id/location"
                style="@style/TextViewsStyle"
                android:text="@string/nile_river_street"
                android:drawableLeft="@drawable/ic_place_black_24dp"
                android:drawableStart="@drawable/ic_place_black_24dp"/>

        <TextView
            android:id="@+id/hours"
            style="@style/TextViewsStyle"
            android:text="@string/working_hours"
            android:drawableLeft="@drawable/ic_access_time_black_24dp"
            android:drawableStart="@drawable/ic_access_time_black_24dp" />

        <TextView
            android:id="@+id/phone"
            style="@style/TextViewsStyle"
            android:text="@string/phone_no"
            android:drawableLeft="@drawable/ic_phone_black_24dp"
            android:drawableStart="@drawable/ic_phone_black_24dp"/>

    </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>